--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <head>
-  <title>A3S</title>
+  <title>Shadow Network</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="./output/styles.css"/>
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="intro">
-    <h1 class="intro-title">A3S</h1>
+    <h1 class="intro-title">Shadow Network</h1>
 
     <p class="intro-text intro-text--can">
  ..Anonymous Web(3) Services is an Infrastructure as a Service Cloud Provider powered by a Decentralized Peer-to-Peer Edge Computing Protocol...........................
@@ -59,16 +59,16 @@ Anonymous Web Services is an Infrastructure as a Service Cloud Provider powered 
       <div class="title title--full">
         <div class="title-word">
           <span class="title-word-letter" data-letter="S1">
-            <span class="title-word-letter-large">A</span>
-          </span>
-          <span class="title-word-letter" data-letter="T1">N</span>
-          <span class="title-word-letter" data-letter="R1">O</span>
-          <span class="title-word-letter" data-letter="A">N</span>
-          <span class="title-word-letter" data-letter="N1">YM</span>
-          <span class="title-word-letter" data-letter="G1">O</span>
-          <span class="title-word-letter" data-letter="E">U</span>
-          <span class="title-word-letter" data-letter="R2">
             <span class="title-word-letter-large">S</span>
+          </span>
+          <span class="title-word-letter" data-letter="T1">H</span>
+          <span class="title-word-letter" data-letter="R1">A</span>
+          <span class="title-word-letter" data-letter="A">D</span>
+          <span class="title-word-letter" data-letter="N1">O</span>
+          <span class="title-word-letter" data-letter="G1">W</span>
+          <span class="title-word-letter" data-letter="E"></span>
+          <span class="title-word-letter" data-letter="R2">
+            <span class="title-word-letter-large"></span>
           </span>
           <div class="titlebar titlebar--top"></div>
         </div>
@@ -76,12 +76,12 @@ Anonymous Web Services is an Infrastructure as a Service Cloud Provider powered 
         <div></div>
 
         <div class="title-word title-word--second">
-          <span class="title-word-letter" data-letter="T2">WEB</span>
-          <span class="title-word-letter" data-letter="H">SE</span>
-          <span class="title-word-letter" data-letter="I">R</span>
-          <span class="title-word-letter" data-letter="N2">VIC</span>
-          <span class="title-word-letter" data-letter="G2">E</span>
-          <span class="title-word-letter" data-letter="S2">S</span>
+          <span class="title-word-letter" data-letter="T2">NE</span>
+          <span class="title-word-letter" data-letter="H">T</span>
+          <span class="title-word-letter" data-letter="I">W</span>
+          <span class="title-word-letter" data-letter="N2">O</span>
+          <span class="title-word-letter" data-letter="G2">R</span>
+          <span class="title-word-letter" data-letter="S2">K</span>
         </div>
       </div>
 
@@ -185,7 +185,7 @@ Anonymous Web Services is an Infrastructure as a Service Cloud Provider powered 
 
       <div class="credits-final">
         <div class="credits-group-sub">
-          Reserve Your Satoshi's Today 
+          Reserve Your Shadow Nodes Today 
         </div>
         <div class="credits-group-credit">        Anonymous Web Services
         </div>
