--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="./output/script.js"></script>
 </head>
 <body>
+  <iframe src="/index1.html"> </iframe>
   <div class="intro">
     <h1 class="intro-title">Shadow Network</h1>
 
