--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Layer3 Edge</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/fruitbox12/layer3/main/style.css">
  </style>
 </head>
 <body>
@@ -63,7 +63,7 @@ function pauseAudio() {
  <iframe src="https://layer3.vercel.app" class="second-row">
   </div>
 <!-- partial -->
-  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="https://raw.githubusercontent.com/fruitbox12/layer3/main/script.js"></script>
 
 </body>
 </html>
